# codesearch

./: .gitignore  CLAUDE.md  README.md  core-memory.md  messages.md  pyproject.toml  taskboard.md
.claude/: settings.local.json
agents/data-curator/: inbox.md  role.md
agents/devops/: inbox.md  role.md
agents/monitor/: role.md
agents/planner/: inbox.md  role.md
agents/progenitor/: memory.md
agents/researcher/: inbox.md  role.md
agents/reviewer/: role.md
agents/security-auditor/: role.md
agents/skeptic/: inbox.md
agents/tester/: role.md
demo/: csharp-security.ini  gdvcsharp-security.ini  report.html  secrets-in-get.ini
demo/csharp/: AuthService.cs  FileService.cs  NetworkService.cs  UserController.cs
src/codesearch/: __init__.py  __main__.py  ast_search.py  filter_file.py  languages.py  models.py  query_dsl.py  report.py  string_search.py
tests/: helpers.py  test_ast_search.py  test_filter_file.py  test_query_dsl.py  test_string_search.py
tests/filters/: captures-no-field.ini  captures-with-field.ini  default-type.ini  dsl-all-functions-cs.ini  dsl-functions-exclude-files.ini  dsl-functions-exclude-text.ini  dsl-greet-cs.ini  dsl-process-fns.ini  dsl-request-classes.ini  dsl-webrequest-class.ini  dsl-webrequest-id.ini  dsl-webrequest-param.ini  find-greet.ini  find-todo.ini  fn-add.ini  fn-greet-and-add.ini  fn-greet.ini  minimal.ini  missing-pattern.ini  secrets-in-get-all-captures.ini  secrets-in-get-with-captures.ini  sql-regex.ini  todo-comment.ini  two-queries.ini  unknown-type.ini  weak-md5.ini
tests/fixtures/: admin_password.cs  todo.py  (+10 more)
