[project]
name = "codesearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uraxii (Nicole-Brandon)", email = "nicole@nicolepaul.net" }
]
requires-python = ">=3.14"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
codesearch = "codesearch.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
